--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/all.min.css">
   <title>Vsoft</title>
 </head>
@@ -75,7 +75,7 @@
 
           </div>
           <div class="col-lg-6 col-md-12 banner-image">
-            <img src="/img/banner/banner-image.png" alt="" class="img-fluid">
+            <img src="img/banner/banner-image.png" alt="" class="img-fluid">
           </div>
         </div>
       </div>
@@ -88,7 +88,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-6 col-md-12">
-            <div class="about-image"><img src="/img/about-us.png" alt="about-us" class="img-fluid"></div>
+            <div class="about-image"><img src="img/about-us.png" alt="about-us" class="img-fluid"></div>
           </div>
           <div class="col-lg-6 col-md-12 about-title">
             <h2 class="text-uppercase pt-5">
